Simplify `ThirdPartyLibrary#isKnownClass` implementation (#2089)